Include dev fixes (#70)
* Capture error if bucket_list header is empty #31

* Remove context() statements from tests

* Use testthat 3rd edition.

* Fix rank-list-item that spills outside the container boundary #68

* Allow bucket_list to have empty header, and capture error better #69

* Revert to `header = NULL` as default; improve handling of is_header()

* Update is_header() with suggested assertions


* Update R/bucket_list.R after code review

--- a/inst/htmlwidgets/plugins/sortable-rstudio/rank_list.scss
+++ b/inst/htmlwidgets/plugins/sortable-rstudio/rank_list.scss
@@ -32,13 +32,12 @@
 
   .rank-list-item {
     border-radius: $border-radius;
-    // position: relative;
     display: block;
     padding: 10px 15px;
     background-color: $item-background-color;
     border: 1px solid $border-color;
     overflow: hidden;
-    width: 100%;
+    // width: 100%;
 
     &:hover:not(.disabled) {
       background-color: $item-hover-color;
